# HN-backend-centralized

./: .env  Cargo.toml  README.md  holonotes.db
migrations/: 20250623065152_create_notes_table.sql  20250624114359_add_users_table.sql  20250625085808_add-user-id-to-notes.sql
src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs
